Rev comment included: added hann window before FFT

--- a/app_audio_analyzer/Makefile
+++ b/app_audio_analyzer/Makefile
@@ -9,7 +9,7 @@ TARGET = SLICEKIT-L16
 APP_NAME = 
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = module_fft_simple module_i2c_single_port module_i2s_master module_logging
+USED_MODULES = module_fft_simple module_i2c_single_port module_i2s_master module_logging module_window
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
