--- a/app_audio_analyzer/Makefile
+++ b/app_audio_analyzer/Makefile
@@ -1,7 +1,7 @@
 # The TARGET variable determines what target system the application is
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling
-TARGET = SLICEKIT-L16
+TARGET = xr-usb-audio-2.0-mc
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
@@ -9,21 +9,21 @@ TARGET = SLICEKIT-L16
 APP_NAME = 
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = module_audio_analyzer module_i2c_single_port module_i2s_master module_logging
+USED_MODULES = module_audio_analyzer module_i2c_simple module_i2s_master module_logging module_xassert
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -O3 -g -report -fxscope
+XCC_FLAGS = -O3 -g -report -save-temps
 XCC_FLAGS_Loopback = $(XCC_FLAGS) -DSIMULATOR_LOOPBACK=1
 
 # The VERBOSE variable, if set to 1, enables verbose output from the make system.
 VERBOSE = 0
 
 test:
-	axe --loopback XS1_PORT_1F XS1_PORT_1A --loopback XS1_PORT_1E XS1_PORT_1D bin/Loopback/app_audio_analyzer_Loopback.xe
+	axe --loopback tile[1]:XS1_PORT_1J tile[1]:XS1_PORT_1L --loopback tile[1]:XS1_PORT_1M tile[1]:XS1_PORT_1G --loopback tile[1]:XS1_PORT_1F tile[1]:XS1_PORT_1A --loopback tile[1]:XS1_PORT_1H tile[1]:XS1_PORT_1B bin/Loopback/app_audio_analyzer_Loopback.xe
 
 
 #=============================================================================
