--- a/app_audio_analyzer/Makefile
+++ b/app_audio_analyzer/Makefile
@@ -16,14 +16,26 @@ USED_MODULES = module_audio_analyzer module_i2c_simple module_i2s_master module_
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -O3 -g -report -save-temps
-XCC_FLAGS_Loopback = $(XCC_FLAGS) -DSIMULATOR_LOOPBACK=1
+COMMON_FLAGS = -O3 -g -report -save-temps
+XCC_FLAGS_SimulatorLoopback = $(COMMON_FLAGS) -DSIMULATOR_LOOPBACK=1
+XCC_FLAGS_GlitchInjector = $(COMMON_FLAGS) -fxscope
+XCC_FLAGS_TestDevice1 = $(COMMON_FLAGS) -fxscope
+XCC_FLAGS_TestDevice2 = $(COMMON_FLAGS) -fxscope
+
+INCLUDE_ONLY_IN_SimulatorLoopback = src/config_SimulatorLoopback
+INCLUDE_ONLY_IN_GlitchInjector = src/config_GlitchInjector
+INCLUDE_ONLY_IN_TestDevice1 = src/config_TestDevice1
+INCLUDE_ONLY_IN_TestDevice2 = src/config_TestDevice2
+
+ifeq ($(CONFIG),SimulatorLoopback)
+EXCLUDE_DIRS=./src/xscope
+endif
 
 # The VERBOSE variable, if set to 1, enables verbose output from the make system.
 VERBOSE = 0
 
 test:
-	axe --loopback tile[1]:XS1_PORT_1J tile[1]:XS1_PORT_1L --loopback tile[1]:XS1_PORT_1M tile[1]:XS1_PORT_1G --loopback tile[1]:XS1_PORT_1F tile[1]:XS1_PORT_1A --loopback tile[1]:XS1_PORT_1H tile[1]:XS1_PORT_1B bin/Loopback/app_audio_analyzer_Loopback.xe
+	axe --loopback tile[1]:XS1_PORT_1J tile[1]:XS1_PORT_1L --loopback tile[1]:XS1_PORT_1M tile[1]:XS1_PORT_1G --loopback tile[1]:XS1_PORT_1F tile[1]:XS1_PORT_1A --loopback tile[1]:XS1_PORT_1H tile[1]:XS1_PORT_1B bin/SimulatorLoopback/app_audio_analyzer_SimulatorLoopback.xe
 
 
 #=============================================================================
