Add a test for glitch detection across the range of frequencies and at different points in the sine wave.

--- a/app_audio_analyzer_avb/Makefile
+++ b/app_audio_analyzer_avb/Makefile
@@ -5,7 +5,7 @@ TARGET = SLICEKIT-L16
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
 # the project name
-APP_NAME = audio_analyser
+APP_NAME = audio_analyzer
 
 # The USED_MODULES variable lists other module used by the application.
 USED_MODULES  = module_audio_analyzer module_i2c_simple module_i2s_master 
