Adding ethernet tap relay control to AVB app.

--- a/app_audio_analyzer_avb/Makefile
+++ b/app_audio_analyzer_avb/Makefile
@@ -9,7 +9,7 @@ APP_NAME = audio_analyzer
 
 # The USED_MODULES variable lists other module used by the application.
 USED_MODULES  = module_audio_analyzer module_i2c_simple module_i2s_master 
-USED_MODULES += module_logging module_xassert module_spdif_rx
+USED_MODULES += module_logging module_xassert module_spdif_rx module_ethernet_tap
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
